More checks and Javadocs on the builder methods/classes